styles/globals.scss
/* ... */
.blog-recommendations {
  border-width: 1px;
  border-style: solid;
  border-image: repeating-linear-gradient(
      to right,
      rgb(var(--grey-color5)) 0,
      rgb(var(--grey-color5)) 5px,
      transparent 5px,
      transparent 10px
    )
    5;
  border-left: none;
  border-right: none;
  border-bottom: none;
  margin-top: 60px;
  padding-top: 60px;

  h2 {
    font-size: 20px !important;
    font-weight: 600 !important;
    margin: 0 !important;
  }
  .blog-list {
    display: flex;
    gap: 20px;
    margin-bottom: 40px;

    h3 {
      font-size: 16px;
    }
  }
}

.blog-page-wrapper {
  margin-top: 60px;

  .back-to-blogs {
    position: sticky;
    text-decoration: none;
    color: rgb(var(--blue-color2));
    top: 48px;
    z-index: 10;
    margin-bottom: 30px;
    background-color: rgb(var(--light-color));
    border: 1px solid rgb(var(--grey-color2));
    border-radius: 20px;
    height: 30px;
    padding: 0 5px;
    overflow: hidden;
    opacity: 0;
    transform: scale(1.1);
    animation: backBtnAnimation 4s ease both;

    span {
      animation: backLabelAnimation 4s ease both;
      overflow: hidden;
      font-weight: 400;
    }

    svg {
      padding-top: 1px;
      padding-right: 0.5px;
    }
  }

  .blogs-nav {
    margin-top: -60px;
    float: right;
    z-index: 6;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    gap: 12px;
    animation: growNav 0.5s ease both;
    overflow: hidden;

    .blogs-share {
      cursor: pointer;
      border: 1px solid rgb(var(--grey-color2));
      border-radius: 100%;
      padding: 6px;
      background-color: rgb(var(--dark-color));
      color: rgb(var(--light-color));

      &:focus-visible {
        outline: none;
        box-shadow:
          inset 0 0 0 2px rgb(var(--light-color)),
          inset 0 0 0 4px rgba(var(--primary-color), 0.75);
      }
    }

    .blogs-meta {
      display: flex;
      border: 1px solid rgb(var(--grey-color2));
      background-color: rgb(var(--light-color));
      border-radius: 20px;
      gap: 8px;
      padding: 6px 12px;

      .divider {
        height: 14px;
        margin-top: 2px;
        width: 1px;
        background-color: dimgray;
      }

      h6 {
        gap: 6px;
        color: dimgray;
        font-size: 14px;
        font-weight: 500;
        white-space: nowrap;

        .views-count-span {
          display: inline-block;
          min-width: 8px;
          transition: width 0.3s ease-out;
          overflow: hidden;
          white-space: nowrap;
        }
      }
    }
  }

  .highlighted-code {
    font-weight: 600;
    font-size: 12px;
    padding: 2px 4px;
    border-radius: 4px;
    background: rgb(var(--white-backdrop));
    color: rgb(var(--grey-color4));
  }

  h2 {
    margin: 20px 0 40px 0;
    font-size: 36px;
    font-weight: 700;
  }

  h3 {
    margin: 15px 0;
    font-weight: 600;
  }

  h4 {
    font-weight: 500;
    margin: 20px 0 10px 0;
  }

  h5 {
    font-weight: 500;
    margin: 20px 0 10px 0;
  }

  p {
    margin: 0 0 12.5px 0;
    line-height: 24px;
    color: rgb(var(--grey-color3));
    font-size: 15px;
  }

  pre {
    border-radius: 6px;
    margin-bottom: 30px;
  }

  code {
    font-size: 14px !important;
    font-family: monospace !important;
    * {
      font-family: monospace !important;
    }
  }

  .markdown {
    animation: peakUpPage 0.4s ease both;
    animation-delay: 0.4s;
  }

  .markdown > div > div {
    line-height: 24px;
    color: rgb(var(--grey-color3));
    font-size: 15px;
    p {
      padding-top: 10px;
      padding-left: 20px;
      margin: 0px;
    }
  }

  @media screen and (max-width: 500px) {
    margin-top: 0px;
  }
}

.footer {
  max-width: 860px;
  width: 100%;
  margin: auto;
  margin: 100px auto 24px auto;
  padding-top: 10px;
  border-top: 1px dashed rgba(var(--grey-color5), 0.75);
  animation: fadeInBlur ease;

  @supports (animation-timeline: view()) {
    animation-timeline: view();
    animation-range: entry 30% cover 0%;
  }

  .footer-section {
    width: 100%;
    display: flex;
    justify-content: space-between;
    padding-right: 16px;

    span {
      font-weight: 500;
      font-size: 14px;
      padding-left: 16px;
      color: rgba(var(--grey-color4), 0.5);
    }

    img {
      filter: grayscale(1) brightness(1.25);
    }

    .footer-about {
      display: flex;
      flex-direction: column;
      justify-content: space-between;
    }

    .footer-links {
      display: flex;
      padding-top: 16px;
      gap: 60px;

      .footer-links-group {
        ul {
          margin-block: 0;
          padding-inline: 0;
          list-style: none;

          li {
            padding: 2px 0;
            a {
              text-decoration: none;
              color: rgba(var(--grey-color), 0.9);
              font-weight: 500;
              font-size: 16px;
            }
          }
        }
      }
    }
  }
}

.flex-between {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.flex-center {
  display: flex;
  align-items: center;
  justify-content: center;
}

.flex-start {
  display: flex;
  align-items: center;
  justify-content: flex-start;
}
/* ... */

